--- a/src/css/form.css
+++ b/src/css/form.css
@@ -99,3 +99,23 @@
     }
   }
 }
+
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 5px solid #f3f3f3;
+  border-top: 5px solid #3498db;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+  display: block;
+  margin: 40px auto;  
+}
+
+.loader.is-hidden {
+  display: none;  
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
